# rust-qrcli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
qr/: Cargo.toml
qr/src/: ec.rs  encode.rs  image.rs  lib.rs  matrix.rs  prelude.rs  qr.rs  serde.rs  text_encode.rs  version.rs
qr/src/writer/: image.rs  json.rs  mod.rs  prelude.rs
qrcli/: Cargo.toml
qrcli/src/: args.rs  main.rs
