[package]
name = "qr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "^0.22"
encoding_rs = "^0.8"
ndarray = { version = "^0.15", features = ["rayon"] }
rayon = "^1.5"
image_ = { package = "image", version = "^0.23", optional = true }
serde_ = { package = "serde", version = "^1.0", optional = true }
serde_json = { version = "^1.0", optional = true }

[features]
image = ["image_"]
serde = ["serde_"]
json = ["serde", "serde_json"]